feat(conflict): implement schedule conflict resolution list and handling (NCL-07-CN-005)